stateDiagram-v2
  [*] --> draft : Goal sheet created

  draft --> submitted : Employee submits (100% weight valid)
  submitted --> in_review : Manager opens review
  submitted --> draft : Manager returns for rework
  in_review --> draft : Manager returns for rework
  submitted --> locked : Manager approves & locks
  in_review --> locked : Manager approves & locks

  locked --> reopened : Admin unlocks (audit logged)
  reopened --> submitted : Employee re-submits

  locked --> [*] : Check-ins open

  note right of draft : Employee can edit freely
  note right of locked : No edits without Admin intervention
  note right of submitted : Awaiting manager review
